--- a/make_csv.ipynb
+++ b/make_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 70,
    "id": "5c1db941",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import numpy as np \n",
     "import pandas as pd \n",
     "\n",
-    "meV2kcal = 23.0609 * 10**(-3) # 1 eV = 23.0609 kcal/mol"
+    "meV2kcal = 23.0609 * 10**(-3) # 1 eV   = 23.0609 kcal/mol\n",
+    "bohr2A   = 0.529177249        # 1 Bohr = 0.529177249 A "
    ]
   },
   {
@@ -23,7 +24,7 @@
     "2. Azobenzene\n",
     "3. Benzene\n",
     "4. Ethanol\n",
-    "5. Malondialdehyde\n",
+    "5. Malonaldehyde\n",
     "6. Naphthalene\n",
     "7. Paracetamol\n",
     "8. Salicylic_Acid\n",
@@ -31,19 +32,18 @@
     "10. Uracil\n",
     "\n",
     "For **QM9** dataset, the MAEs will be always in the follwoing order: \n",
-    "1. Dipole moment\n",
-    "2. Polarizability\n",
-    "3. HOMO\n",
-    "4. LUMO\n",
-    "5. HOMO-LUMO gap \n",
-    "6. < R<sup>2</sup> >\n",
-    "7. Zero point energy\n",
-    "8. Internal energy\n",
-    "9. Enthaply\n",
-    "10. Free energy at 298.15 K ()\n",
-    "11. Heat capacity \n",
-    "12. \n",
-    "13.\n",
+    "1.  $\\mu$  \n",
+    "2.  $\\alpha$  \n",
+    "3.  $\\epsilon_{\\text{HOMO}}$  \n",
+    "4.  $\\epsilon_{\\text{LUMO}}$  \n",
+    "5.  $\\Delta \\epsilon$  \n",
+    "6.  $\\langle R^2 \\rangle$  \n",
+    "7.  $\\text{ZPVE}$  \n",
+    "8.  $U_0$  \n",
+    "9.  $U$  \n",
+    "10. $H$  \n",
+    "11. $G$  \n",
+    "12. $c_v$\n",
     "\n",
     "If analysis for a molcule for particular ML archetecture is missing, then it will be marked by '**-1**'."
    ]
@@ -60,35 +60,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3edd4a16",
-   "metadata": {},
-   "source": [
-    "Framework: <b>SchNet</b>\n",
-    "<br>\n",
-    "DOI: <i></i>\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 71,
    "id": "48d1f097",
    "metadata": {},
    "outputs": [],
    "source": [
-    "schnet = {\n",
+    "schnet = { # Train on both\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': [0.37,'x',0.08,0.08,0.13,0.16,'x',0.20,0.12,0.14],\n",
     "        'F': [1.35,'x',0.31,0.39,0.66,0.58,'x',0.85,0.57,0.56]\n",
+    "    },\n",
+    "    'QM9': {\n",
+    "        'unit': 'kcal/mol_D_A3',\n",
+    "        'mae': [0.033,0.035,0.945,0.784,1.453,0.020,0.039,0.323,0.438,0.323,0.323,0.033]\n",
     "    }\n",
     "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 72,
    "id": "c5a53677",
    "metadata": {},
    "outputs": [],
@@ -106,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 73,
    "id": "edc9c42f",
    "metadata": {},
    "outputs": [],
@@ -116,13 +109,17 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.204,'x',0.078,0.064,0.104,0.122,'x',0.134,0.102,0.115],\n",
     "        'F': [0.499,'x',0.187,0.230,0.383,0.215,'x',0.374,0.216,0.301]\n",
+    "    },\n",
+    "    'QM9': {\n",
+    "        'unit': 'kcal/mol_D_A3',\n",
+    "        'mae': [0.030,0.007,0.567,0.450,0.752,0.093,0.028,0.146,0.145,0.151,0.174,0.023]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 74,
    "id": "be580a02",
    "metadata": {},
    "outputs": [],
@@ -132,6 +129,10 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.230,'x','x',0.059,0.094,0.142,'x',0.126,0.100,0.108],\n",
     "        'F': [0.605,'x','x',0.160,0.319,0.310,'x',0.337,0.191,0.218]\n",
+    "    },\n",
+    "    'QM9': {\n",
+    "        'unit': 'kcal/mol_D_A3',\n",
+    "        'mae': [0.053,0.009,0.759,0.570,0.980,0.214,0.032,0.188,0.192,0.194,0.217,0.028]\n",
     "    }\n",
     "}\n",
     "\n",
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 75,
    "id": "bc698795",
    "metadata": {},
    "outputs": [],
@@ -150,7 +151,7 @@
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': ['x','x','x','x','x','x','x','x','x','x'],\n",
-    "        'F': [0.217,'x','x',0.088,0.159,0.051,'x',0.124,0.060,0.104]\n",
+    "        'F': [0.217,'x','x',0.088,0.159,0.051,'x',0.125,0.060,0.104]\n",
     "    }\n",
     "}\n",
     "\n",
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 76,
    "id": "81897487",
    "metadata": {},
    "outputs": [],
@@ -183,13 +184,17 @@
     "        'unit': 'kcal',\n",
     "        'E': [0.159,'x','x',0.063,0.091,0.117,'x',0.114,0.097,0.104],\n",
     "        'F': [0.371,'x','x',0.230,0.319,0.083,'x',0.209,0.102,0.140]\n",
+    "    },\n",
+    "    'QM9': {\n",
+    "        'unit': 'kcal/mol_D_A3',\n",
+    "        'mae': [0.012,0.007,0.636,0.470,1.054,0.018,0.030,0.135,0.134,0.138,0.169,0.024]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 77,
    "id": "3d0df0d5",
    "metadata": {},
    "outputs": [],
@@ -197,15 +202,15 @@
     "eninet = {\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.148,np.nan,0.074,0.043,0.071,0.077,np.nan,0.092,0.078,0.093],\n",
-    "        'F': [0.198,np.nan,0.169,0.100,0.192,0.046,np.nan,0.093,0.051,0.082]\n",
+    "        'E': [0.148,'x',0.074,0.043,0.071,0.077,'x',0.092,0.078,0.093],\n",
+    "        'F': [0.198,'x',0.169,0.100,0.192,0.046,'x',0.093,0.051,0.082]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 78,
    "id": "e21d7b46",
    "metadata": {},
    "outputs": [],
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 79,
    "id": "7b0f39a3",
    "metadata": {},
    "outputs": [],
@@ -261,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 80,
    "id": "ee4138f8",
    "metadata": {},
    "outputs": [],
@@ -270,14 +275,14 @@
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
     "        'E': [0.051,0.028,0.009,0.009,0.018,0.012,0.030,0.021,0.012,0.012],\n",
-    "        'F': [0.125,0.069,0.007,0.048,0.095,0.037,0.111,0.071,0.035,0.048]\n",
+    "        'F': [0.152,0.069,0.007,0.048,0.095,0.037,0.111,0.071,0.035,0.048]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 81,
    "id": "5d5451b0",
    "metadata": {},
    "outputs": [],
@@ -285,7 +290,7 @@
     "newtonnet = {\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.168,0.142,'x',0.078,0.096,0.118,0.141,0.115,0.094,0.107],\n",
+    "        'E': [0.168,0.142,'x',0.078,0.096,0.118,0.135,0.115,0.094,0.107],\n",
     "        'F': [0.348,0.138,'x',0.264,0.323,0.084,0.263,0.197,0.088,0.149]\n",
     "    }\n",
     "}"
@@ -293,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 82,
    "id": "35b3a4c7",
    "metadata": {},
    "outputs": [],
@@ -301,7 +306,7 @@
     "allegro = {\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.053,0.028,0.007,0.009,0.014,0.005,0.035,0.021,0.009,0.014],\n",
+    "        'E': [0.053,0.028,0.007,0.009,0.014,0.012,0.035,0.021,0.009,0.014],\n",
     "        'F': [0.168,0.060,0.005,0.048,0.083,0.021,0.113,0.067,0.042,0.042]\n",
     "    }\n",
     "}"
@@ -309,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 83,
    "id": "91e7c7c0",
    "metadata": {},
    "outputs": [],
@@ -325,23 +330,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 84,
    "id": "bf444f4b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# fchl_19 = {\n",
+    "#     'MD17': {\n",
+    "#         'unit': 'kcal',\n",
+    "#         'E': [0.182,'x','x',0.054,0.081,0.117,'x',0.114,0.098,0.104],\n",
+    "#         'F': [0.478,'x','x',0.136,0.245,0.151,'x',0.221,0.203,0.105]\n",
+    "#     }\n",
+    "# } \n",
+    "\n",
     "fchl_19 = {\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.182,'x','x',0.054,0.081,0.117,'x',0.114,0.098,0.104],\n",
-    "        'F': [0.478,'x','x',0.136,0.245,0.151,'x',0.221,0.203,0.105]\n",
+    "        'E': [0.143,0.065,0.008,0.021,0.035,0.028,0.067,0.042,0.039,0.014],\n",
+    "        'F': [0.482,0.249,0.060,0.143,0.238,0.150,0.284,0.219,0.203,0.097]\n",
     "    }\n",
     "} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 85,
    "id": "72164cfa",
    "metadata": {},
    "outputs": [],
@@ -357,108 +370,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 86,
    "id": "44b1ca4b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sgdml = {\n",
+    "#     'MD17': {\n",
+    "#         'unit': 'kcal',\n",
+    "#         'E': [0.19,0.092,'x',0.07,0.10,0.12,0.153,0.12,0.10,0.11],\n",
+    "#         'F': [0.68,0.409,'x',0.33,0.41,0.11,0.491,0.28,0.14,0.24]\n",
+    "#     }\n",
+    "# }\n",
+    "\n",
     "sgdml = {\n",
     "    'MD17': {\n",
     "        'unit': 'kcal',\n",
-    "        'E': [0.19,0.092,'x',0.07,0.10,0.12,0.153,0.12,0.10,0.11],\n",
-    "        'F': [0.68,0.409,'x',0.33,0.41,0.11,0.491,0.28,0.14,0.24]\n",
+    "        'E': [0.166,0.099,0.001,0.055,0.071,0.018,0.115,0.048,0.023,0.032],\n",
+    "        'F': [0.733,0.443,0.018,0.369,0.434,0.125,0.537,0.295,0.145,0.240]\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "f501b0ac",
+   "execution_count": 87,
+   "id": "188ac224",
    "metadata": {},
    "outputs": [],
    "source": [
-    "md17_molecules = [\n",
-    "    'Aspirin',\n",
-    "    'Azobenzene',\n",
-    "    'Benzene',\n",
-    "    'Ethanol',\n",
-    "    'Malondialdehyde',\n",
-    "    'Naphthalene',\n",
-    "    'Paracetamol',\n",
-    "    'Salicylic_Acid',\n",
-    "    'Toluene',\n",
-    "    'Uracil',\n",
-    "]"
+    "ace = {\n",
+    "    'MD17': {\n",
+    "        'unit': 'kcal',\n",
+    "        'E': [0.141,0.083,0.001,0.028,0.039,0.021,0.092,0.042,0.025,0.025],\n",
+    "        'F': [0.413,0.251,0.012,0.168,0.256,0.118,0.293,0.214,0.150,0.152]\n",
+    "    }\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 88,
    "id": "0ebb04e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "framework_MD17 = [\n",
-    "    ['schnet',schnet],\n",
-    "    ['dimenet',dimenet],\n",
-    "    ['physnet',physnet],\n",
-    "    ['gemnet_q',gemnet_q],\n",
-    "    ['gemnet_t',gemnet_t],\n",
-    "    ['painn_force_only',painn_force_only],\n",
-    "    ['painn_force_energy',painn_force_energy ],\n",
-    "    ['eninet',eninet],\n",
-    "    ['spookynet',spookynet],\n",
-    "    ['neqip_l0',neqip_l0],\n",
-    "    ['neqip_l1',neqip_l1],\n",
-    "    ['neqip_l2',neqip_l2],\n",
-    "    ['neqip_l3',neqip_l3],\n",
-    "    ['mace',mace],\n",
-    "    ['newtonnet',newtonnet],\n",
-    "    ['allegro',allegro],\n",
-    "    ['so3krates',so3krates],\n",
-    "    ['fchl_19',fchl_19],\n",
-    "    ['gap_soap',gap_soap],\n",
-    "    ['sgdml',sgdml],\n",
+    "    ['SchNet',schnet],\n",
+    "    ['DimeNet',dimenet],\n",
+    "    ['PhysNet',physnet],\n",
+    "    ['GemNet(Q)',gemnet_q],\n",
+    "    ['GemNet(T)',gemnet_t],\n",
+    "    ['PaiNN(F)',painn_force_only],\n",
+    "    ['PaiNN(F+E)',painn_force_energy ],\n",
+    "    ['ENINet',eninet],\n",
+    "    ['SpookyNet',spookynet],\n",
+    "    ['NequIP(l=0)',neqip_l0],\n",
+    "    ['NequIP(l=1)',neqip_l1],\n",
+    "    ['NequIP(l=2)',neqip_l2],\n",
+    "    ['NequIP(l=3)',neqip_l3],\n",
+    "    ['MACE',mace],\n",
+    "    ['NewtonNet',newtonnet],\n",
+    "    ['Allegro',allegro],\n",
+    "    ['SO3krates',so3krates],\n",
+    "    ['FCHL19',fchl_19],\n",
+    "    ['GAP(SOAP)',gap_soap],\n",
+    "    ['sGDML',sgdml],\n",
+    "    ['ACE',ace],\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "id": "caef6b24",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.37, 'x', 0.08, 0.08, 0.13, 0.16, 'x', 0.2, 0.12, 0.14]\n",
-      "[0.204, 'x', 0.078, 0.064, 0.104, 0.122, 'x', 0.134, 0.102, 0.115]\n",
-      "[0.23, 'x', 'x', 0.059, 0.094, 0.142, 'x', 0.126, 0.1, 0.108]\n",
-      "['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x']\n",
-      "['x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x', 'x']\n",
-      "[0.167, 'x', 'x', 0.064, 0.1, 0.116, 'x', 0.116, 0.095, 0.106]\n",
-      "[0.159, 'x', 'x', 0.063, 0.091, 0.117, 'x', 0.114, 0.097, 0.104]\n",
-      "[0.148, nan, 0.074, 0.043, 0.071, 0.077, nan, 0.092, 0.078, 0.093]\n",
-      "[0.151, 'x', 'x', 0.052, 0.079, 0.116, 'x', 0.114, 0.094, 0.105]\n",
-      "[0.581, 0.468, 0.074, 0.046, 0.101, 0.339, 0.404, 0.263, 0.224, 0.231]\n",
-      "[0.088, 0.025, 0.002, 0.023, 0.037, 0.009, 0.048, 0.023, 0.012, 0.014]\n",
-      "[0.055, 0.018, 0.001, 0.012, 0.021, 0.007, 0.032, 0.018, 0.007, 0.009]\n",
-      "[0.053, 0.016, 0.001, 0.009, 0.018, 0.005, 0.032, 0.016, 0.007, 0.009]\n",
-      "[0.051, 0.028, 0.009, 0.009, 0.018, 0.012, 0.03, 0.021, 0.012, 0.012]\n",
-      "[0.168, 0.142, 'x', 0.078, 0.096, 0.118, 0.141, 0.115, 0.094, 0.107]\n",
-      "[0.053, 0.028, 0.007, 0.009, 0.014, 0.005, 0.035, 0.021, 0.009, 0.014]\n",
-      "[0.139, 'x', 'x', 0.052, 0.077, 0.115, 'x', 0.106, 0.095, 0.103]\n",
-      "[0.182, 'x', 'x', 0.054, 0.081, 0.117, 'x', 0.114, 0.098, 0.104]\n",
-      "[0.408, 0.196, 0.017, 0.081, 0.111, 0.088, 0.196, 0.129, 0.092, 0.069]\n",
-      "[0.19, 0.092, 'x', 0.07, 0.1, 0.12, 0.153, 0.12, 0.1, 0.11]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for ml in framework_MD17:\n",
-    "    print(ml[1]['MD17']['E'])"
    ]
   },
   {
@@ -471,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "e1dcd9b9",
    "metadata": {},
    "outputs": [],
@@ -482,29 +461,53 @@
     "    data[ml[0]] = ml[1]['MD17']['E']\n",
     "\n",
     "df = pd.DataFrame(data)\n",
-    "df.to_csv(\"MD17_Energy.csv\", index=False)\n"
+    "df.index = ['Aspirin','Azobenzene','Benzene','Ethanol','Malonaldehyde','Naphthalene','Paracetamol','Salicylic_Acid','Toluene','Uracil']\n",
+    "df.index.name = \"MD17_molecules\"\n",
+    "df.to_csv(\"MD17_Energy.csv\", index=True)\n",
+    "\n",
+    "\n",
+    "data = {} # Force\n",
+    "\n",
+    "for ml in framework_MD17:  \n",
+    "    data[ml[0]] = ml[1]['MD17']['F']\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.index = ['Aspirin','Azobenzene','Benzene','Ethanol','Malonaldehyde','Naphthalene','Paracetamol','Salicylic_Acid','Toluene','Uracil']\n",
+    "df.index.name = \"MD17_molecules\"\n",
+    "df.to_csv(\"MD17_Force.csv\", index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d91fee9",
+   "metadata": {},
+   "source": [
+    "For QM9 dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "8fce0735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = {} \n",
+    "\n",
+    "# for ml in framework_MD17:  \n",
+    "#     if 'QM9' in ml[1]:\n",
+    "#         data[ml[0]] = ml[1]['QM9']['mae']\n",
+    "\n",
+    "# df = pd.DataFrame(data)\n",
+    "# df.index = ['μ','α ','HOMO','LUMO','∆','<R2>','ZPVE','U0','U','H','G','cv']\n",
+    "# df.index.name = \"QM9_properties\"\n",
+    "# df.to_csv(\"QM9.csv\", index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d549602d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "319790b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ffd80a",
+   "id": "45848353",
    "metadata": {},
    "outputs": [],
    "source": []
