--- a/plot_NequIP_l.ipynb
+++ b/plot_NequIP_l.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "88408241",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "0eec1645",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,6 @@
        "      <th>ENINet</th>\n",
        "      <th>SpookyNet</th>\n",
        "      <th>...</th>\n",
-       "      <th>NequIP(l=1)</th>\n",
        "      <th>NequIP(l=2)</th>\n",
        "      <th>NequIP(l=3)</th>\n",
        "      <th>MACE</th>\n",
@@ -59,6 +58,7 @@
        "      <th>FCHL19</th>\n",
        "      <th>GAP(SOAP)</th>\n",
        "      <th>sGDML</th>\n",
+       "      <th>ACE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -75,16 +75,16 @@
        "      <td>0.148</td>\n",
        "      <td>0.151</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.088</td>\n",
        "      <td>0.055</td>\n",
        "      <td>0.053</td>\n",
        "      <td>0.051</td>\n",
        "      <td>0.168</td>\n",
        "      <td>0.053</td>\n",
        "      <td>0.139</td>\n",
-       "      <td>0.182</td>\n",
+       "      <td>0.143</td>\n",
        "      <td>0.408</td>\n",
-       "      <td>0.19</td>\n",
+       "      <td>0.166</td>\n",
+       "      <td>0.141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -99,16 +99,16 @@
        "      <td>x</td>\n",
        "      <td>x</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.025</td>\n",
        "      <td>0.018</td>\n",
        "      <td>0.016</td>\n",
        "      <td>0.028</td>\n",
        "      <td>0.142</td>\n",
        "      <td>0.028</td>\n",
        "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.065</td>\n",
        "      <td>0.196</td>\n",
-       "      <td>0.092</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>0.083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -123,16 +123,16 @@
        "      <td>0.074</td>\n",
        "      <td>x</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.002</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.001</td>\n",
        "      <td>0.009</td>\n",
        "      <td>x</td>\n",
        "      <td>0.007</td>\n",
        "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.008</td>\n",
        "      <td>0.017</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -147,20 +147,20 @@
        "      <td>0.043</td>\n",
        "      <td>0.052</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.023</td>\n",
        "      <td>0.012</td>\n",
        "      <td>0.009</td>\n",
        "      <td>0.009</td>\n",
        "      <td>0.078</td>\n",
        "      <td>0.009</td>\n",
        "      <td>0.052</td>\n",
-       "      <td>0.054</td>\n",
+       "      <td>0.021</td>\n",
        "      <td>0.081</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Malondialdehyde</td>\n",
+       "      <td>Malonaldehyde</td>\n",
        "      <td>0.13</td>\n",
        "      <td>0.104</td>\n",
        "      <td>0.094</td>\n",
@@ -171,48 +171,48 @@
        "      <td>0.071</td>\n",
        "      <td>0.079</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.037</td>\n",
        "      <td>0.021</td>\n",
        "      <td>0.018</td>\n",
        "      <td>0.018</td>\n",
        "      <td>0.096</td>\n",
        "      <td>0.014</td>\n",
        "      <td>0.077</td>\n",
-       "      <td>0.081</td>\n",
+       "      <td>0.035</td>\n",
        "      <td>0.111</td>\n",
-       "      <td>0.1</td>\n",
+       "      <td>0.071</td>\n",
+       "      <td>0.039</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    MD17_molecules SchNet DimeNet PhysNet GemNet(Q) GemNet(T) PaiNN(F)  \\\n",
-       "0          Aspirin   0.37   0.204    0.23         x         x    0.167   \n",
-       "1       Azobenzene      x       x       x         x         x        x   \n",
-       "2          Benzene   0.08   0.078       x         x         x        x   \n",
-       "3          Ethanol   0.08   0.064   0.059         x         x    0.064   \n",
-       "4  Malondialdehyde   0.13   0.104   0.094         x         x      0.1   \n",
+       "  MD17_molecules SchNet DimeNet PhysNet GemNet(Q) GemNet(T) PaiNN(F)  \\\n",
+       "0        Aspirin   0.37   0.204    0.23         x         x    0.167   \n",
+       "1     Azobenzene      x       x       x         x         x        x   \n",
+       "2        Benzene   0.08   0.078       x         x         x        x   \n",
+       "3        Ethanol   0.08   0.064   0.059         x         x    0.064   \n",
+       "4  Malonaldehyde   0.13   0.104   0.094         x         x      0.1   \n",
        "\n",
-       "  PaiNN(F+E) ENINet SpookyNet  ...  NequIP(l=1)  NequIP(l=2)  NequIP(l=3)  \\\n",
-       "0      0.159  0.148     0.151  ...        0.088        0.055        0.053   \n",
-       "1          x      x         x  ...        0.025        0.018        0.016   \n",
-       "2          x  0.074         x  ...        0.002        0.001        0.001   \n",
-       "3      0.063  0.043     0.052  ...        0.023        0.012        0.009   \n",
-       "4      0.091  0.071     0.079  ...        0.037        0.021        0.018   \n",
+       "  PaiNN(F+E) ENINet SpookyNet  ...  NequIP(l=2)  NequIP(l=3)   MACE  \\\n",
+       "0      0.159  0.148     0.151  ...        0.055        0.053  0.051   \n",
+       "1          x      x         x  ...        0.018        0.016  0.028   \n",
+       "2          x  0.074         x  ...        0.001        0.001  0.009   \n",
+       "3      0.063  0.043     0.052  ...        0.012        0.009  0.009   \n",
+       "4      0.091  0.071     0.079  ...        0.021        0.018  0.018   \n",
        "\n",
-       "    MACE  NewtonNet Allegro  SO3krates FCHL19 GAP(SOAP)  sGDML  \n",
-       "0  0.051      0.168   0.053      0.139  0.182     0.408   0.19  \n",
-       "1  0.028      0.142   0.028          x      x     0.196  0.092  \n",
-       "2  0.009          x   0.007          x      x     0.017      x  \n",
-       "3  0.009      0.078   0.009      0.052  0.054     0.081   0.07  \n",
-       "4  0.018      0.096   0.014      0.077  0.081     0.111    0.1  \n",
+       "   NewtonNet  Allegro SO3krates  FCHL19 GAP(SOAP)  sGDML    ACE  \n",
+       "0      0.168    0.053     0.139   0.143     0.408  0.166  0.141  \n",
+       "1      0.142    0.028         x   0.065     0.196  0.099  0.083  \n",
+       "2          x    0.007         x   0.008     0.017  0.001  0.001  \n",
+       "3      0.078    0.009     0.052   0.021     0.081  0.055  0.028  \n",
+       "4      0.096    0.014     0.077   0.035     0.111  0.071  0.039  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "277effe3",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "a77b4ddd",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,6 @@
        "      <th>ENINet</th>\n",
        "      <th>SpookyNet</th>\n",
        "      <th>...</th>\n",
-       "      <th>NequIP(l=1)</th>\n",
        "      <th>NequIP(l=2)</th>\n",
        "      <th>NequIP(l=3)</th>\n",
        "      <th>MACE</th>\n",
@@ -283,6 +282,7 @@
        "      <th>FCHL19</th>\n",
        "      <th>GAP(SOAP)</th>\n",
        "      <th>sGDML</th>\n",
+       "      <th>ACE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -299,16 +299,16 @@
        "      <td>0.198</td>\n",
        "      <td>0.258</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.291</td>\n",
        "      <td>0.196</td>\n",
        "      <td>0.189</td>\n",
-       "      <td>0.125</td>\n",
+       "      <td>0.152</td>\n",
        "      <td>0.348</td>\n",
        "      <td>0.168</td>\n",
        "      <td>0.236</td>\n",
-       "      <td>0.478</td>\n",
+       "      <td>0.482</td>\n",
        "      <td>1.035</td>\n",
-       "      <td>0.68</td>\n",
+       "      <td>0.733</td>\n",
+       "      <td>0.413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -323,16 +323,16 @@
        "      <td>x</td>\n",
        "      <td>x</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.104</td>\n",
        "      <td>0.076</td>\n",
        "      <td>0.067</td>\n",
        "      <td>0.069</td>\n",
        "      <td>0.138</td>\n",
        "      <td>0.060</td>\n",
        "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.249</td>\n",
        "      <td>0.565</td>\n",
-       "      <td>0.409</td>\n",
+       "      <td>0.443</td>\n",
+       "      <td>0.251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -348,15 +348,15 @@
        "      <td>x</td>\n",
        "      <td>...</td>\n",
        "      <td>0.009</td>\n",
-       "      <td>0.009</td>\n",
        "      <td>0.007</td>\n",
        "      <td>0.007</td>\n",
        "      <td>x</td>\n",
        "      <td>0.005</td>\n",
        "      <td>x</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.060</td>\n",
        "      <td>0.138</td>\n",
-       "      <td>x</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -371,20 +371,20 @@
        "      <td>0.1</td>\n",
        "      <td>0.094</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.150</td>\n",
        "      <td>0.081</td>\n",
        "      <td>0.065</td>\n",
        "      <td>0.048</td>\n",
        "      <td>0.264</td>\n",
        "      <td>0.048</td>\n",
        "      <td>0.096</td>\n",
-       "      <td>0.136</td>\n",
+       "      <td>0.143</td>\n",
        "      <td>0.417</td>\n",
-       "      <td>0.33</td>\n",
+       "      <td>0.369</td>\n",
+       "      <td>0.168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Malondialdehyde</td>\n",
+       "      <td>Malonaldehyde</td>\n",
        "      <td>0.66</td>\n",
        "      <td>0.383</td>\n",
        "      <td>0.319</td>\n",
@@ -395,48 +395,48 @@
        "      <td>0.192</td>\n",
        "      <td>0.167</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.238</td>\n",
        "      <td>0.136</td>\n",
        "      <td>0.118</td>\n",
        "      <td>0.095</td>\n",
        "      <td>0.323</td>\n",
        "      <td>0.083</td>\n",
        "      <td>0.147</td>\n",
-       "      <td>0.245</td>\n",
+       "      <td>0.238</td>\n",
        "      <td>0.609</td>\n",
-       "      <td>0.41</td>\n",
+       "      <td>0.434</td>\n",
+       "      <td>0.256</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    MD17_molecules SchNet DimeNet PhysNet GemNet(Q) GemNet(T) PaiNN(F)  \\\n",
-       "0          Aspirin   1.35   0.499   0.605     0.217     0.219    0.338   \n",
-       "1       Azobenzene      x       x       x         x         x        x   \n",
-       "2          Benzene   0.31   0.187       x         x         x        x   \n",
-       "3          Ethanol   0.39    0.23    0.16     0.088     0.085    0.224   \n",
-       "4  Malondialdehyde   0.66   0.383   0.319     0.159     0.155    0.344   \n",
+       "  MD17_molecules SchNet DimeNet PhysNet GemNet(Q) GemNet(T) PaiNN(F)  \\\n",
+       "0        Aspirin   1.35   0.499   0.605     0.217     0.219    0.338   \n",
+       "1     Azobenzene      x       x       x         x         x        x   \n",
+       "2        Benzene   0.31   0.187       x         x         x        x   \n",
+       "3        Ethanol   0.39    0.23    0.16     0.088     0.085    0.224   \n",
+       "4  Malonaldehyde   0.66   0.383   0.319     0.159     0.155    0.344   \n",
        "\n",
-       "  PaiNN(F+E) ENINet SpookyNet  ...  NequIP(l=1)  NequIP(l=2)  NequIP(l=3)  \\\n",
-       "0      0.371  0.198     0.258  ...        0.291        0.196        0.189   \n",
-       "1          x      x         x  ...        0.104        0.076        0.067   \n",
-       "2          x  0.169         x  ...        0.009        0.009        0.007   \n",
-       "3       0.23    0.1     0.094  ...        0.150        0.081        0.065   \n",
-       "4      0.319  0.192     0.167  ...        0.238        0.136        0.118   \n",
+       "  PaiNN(F+E) ENINet SpookyNet  ...  NequIP(l=2)  NequIP(l=3)   MACE  \\\n",
+       "0      0.371  0.198     0.258  ...        0.196        0.189  0.152   \n",
+       "1          x      x         x  ...        0.076        0.067  0.069   \n",
+       "2          x  0.169         x  ...        0.009        0.007  0.007   \n",
+       "3       0.23    0.1     0.094  ...        0.081        0.065  0.048   \n",
+       "4      0.319  0.192     0.167  ...        0.136        0.118  0.095   \n",
        "\n",
-       "    MACE  NewtonNet Allegro  SO3krates FCHL19 GAP(SOAP)  sGDML  \n",
-       "0  0.125      0.348   0.168      0.236  0.478     1.035   0.68  \n",
-       "1  0.069      0.138   0.060          x      x     0.565  0.409  \n",
-       "2  0.007          x   0.005          x      x     0.138      x  \n",
-       "3  0.048      0.264   0.048      0.096  0.136     0.417   0.33  \n",
-       "4  0.095      0.323   0.083      0.147  0.245     0.609   0.41  \n",
+       "   NewtonNet  Allegro SO3krates  FCHL19 GAP(SOAP)  sGDML    ACE  \n",
+       "0      0.348    0.168     0.236   0.482     1.035  0.733  0.413  \n",
+       "1      0.138    0.060         x   0.249     0.565  0.443  0.251  \n",
+       "2          x    0.005         x   0.060     0.138  0.018  0.012  \n",
+       "3      0.264    0.048     0.096   0.143     0.417  0.369  0.168  \n",
+       "4      0.323    0.083     0.147   0.238     0.609  0.434  0.256  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "f486d017",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "f60ffef7",
    "metadata": {},
    "outputs": [],
@@ -487,12 +487,13 @@
     "    'FCHL19':      '#9c9ede',  # light lavender\n",
     "    'GAP(SOAP)':   '#8ca252',  # light olive green\n",
     "    'sGDML':       '#b5cf6b',  # pastel green\n",
+    "    'ACE':         'violet',   # pastel green\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "8b2fa2b3",
    "metadata": {},
    "outputs": [
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "931d83a0",
    "metadata": {},
    "outputs": [
